# lunwen

./: .gitignore  CLAUDE.md  Dockerfile  README.md  build.spec  build_exe.bat  docker-compose.yml
.claude/: settings.local.json
backend/: .env.example  .gitignore  pyproject.toml  run.py
backend/app/: config.py  config_store.py  main.py
backend/app/agents/: __init__.py  base.py  orchestrator.py  review_agent.py  rewrite_agent.py
backend/app/api/: auth.py  config.py  er_diagram.py  rewrite.py  utils.py
backend/app/auth/: __init__.py  dependencies.py  jwt.py  password.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/middleware/: rate_limit.py
backend/app/models/: er_diagram.py  rewrite.py
backend/app/preprocessing/: __init__.py  citation_guard.py  forbidden_words.py  pipeline.py  sentence_splitter.py
backend/app/prompts/: __init__.py  diagram.py  rewrite.py
backend/app/rag/: __init__.py  chunker.py  document_loader.py  embedder.py  manager.py  retriever.py  vector_store.py
backend/app/services/: config_service.py  er_diagram_service.py  rewrite_service.py
backend/app/services/llm/: base.py  openai_impl.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_health.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useChat.test.ts  useChat.ts  useHistory.test.ts  useHistory.ts  useStreamERDiagram.ts  useStreamRewrite.ts
frontend/src/pages/: ChatPage.tsx  ERDiagramPage.tsx  (+4 more)
(+29 files in other folders)
