[project]
name = "lunwen-backend"
version = "0.1.0"
description = "大学论文整改工具 - 后端 API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "openai>=1.0,<2.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "python-dotenv>=1.0,<2.0",
    "slowapi>=0.1,<1.0",
    "python-multipart>=0.0,<1.0",
    "python-docx>=1.1,<2.0",
    "pymupdf>=1.25,<2.0",
    "jieba>=0.42,<1.0",
    "rank-bm25>=0.2,<1.0",
    "scikit-learn>=1.3,<2.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "aiomysql>=0.2,<1.0",
    "pyjwt>=2.9,<3.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "bcrypt>=4.1,<5.0",
    "cryptography>=44.0,<45.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "httpx>=0.27,<1.0",
    "aiosqlite>=0.20,<1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
